adding customizable hero

--- a/sections/black-hero.liquid
+++ b/sections/black-hero.liquid
@@ -447,8 +447,8 @@
               "value": "right",
               "label": "Right"
             }
-          ]
-          
+          ],
+          "visible_if": "{{block.settings.position_type == 'absolute'}}"
         },{
           "type": "text",
           "id": "horizontal_position_value",
